Update game links with new titles in index.html

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <h1>JUEGOS</h1>
         
         <div class="game-grid">
-            <a href="missile-command.html" class="game-btn">MISSILE COMMAND</a>
-            <a href="donkey-kong.html" class="game-btn">DONKEY KONG</a>
-            <a href="pacman.html" class="game-btn">PACMAN</a>
-            <a href="dinosaur.html" class="game-btn">DINOSAURIO</a>
+            <a href="missile-command.html" class="game-btn">PROTEGE LA CIUDAD</a>
+            <a href="donkey-kong.html" class="game-btn">SALVA AL CIUDADANO</a>
+            <a href="pacman.html" class="game-btn">RESCATA Y HUYE</a>
+            <a href="dinosaur.html" class="game-btn">ESQUIVA LOS ATAQUES</a>
         </div>
     </div>
 </body>
