Update title in index.html to reflect new theme

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>JUEGOS</h1>
+        <h1>Entrenamiento de Heroes - SupersIA</h1>
         
         <div class="game-grid">
             <a href="missile-command.html" class="game-btn">PROTEGE LA CIUDAD</a>
